--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,7 @@ src/utils/__pycache__/utils_2.cpython-36.pyc
 src/utils/__pycache__/utils_nil.cpython-36.pyc
 __pycache__/gradio.cpython-36.pyc
 
+BioSyn-master/
+DILBERT-master/
+
 run_reel.sh
