--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fuzzywuzzy[speedup][0.18.0]
-gensim[4.1.1]
-networkx[2.5.1]
-obonet[0.3.0]
-python-Levenshtein[0.12.2]
-spacy[3.0.7]
-tensorflow-addons[2.2.0]
-tqdm[4.62.2]
+gensim==4.1.1
+networkx==2.5.1
+obonet==0.3.0
+python-Levenshtein==0.12.2
+rapidfuzz==2.0.2
+spacy==3.0.7
+https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_md-0.4.0.tar.gz
+tensorflow-addons==0.14.0
+tqdm==4.62.2
+orjson==1.3.0
